...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Log de Sincronización"
                android:textAppearance="@android:style/TextAppearance.Material.Title" />

            <TextView
                android:id="@+id/sincronizar_log_sync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout></ScrollView>


</LinearLayout>
